# june

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker.yml
src/: main.rs
src/routes/: embed.rs  info.rs  proxy.rs
src/structs/: embed.rs  metadata.rs  special.rs
src/utils/: request.rs  result.rs  variables.rs
